# pdf

./: README.md  build.py  icon.icns  main.py  pyproject.toml  release.py  requirements.txt  test_build.py
.github/workflows/: manual.yml  release.yml
