[project]
name = "pdf-viewer"
version = "0.1.0"
description = "Professional cross-platform PDF viewer with dual-page mode and animations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.26.4",
    "pillow>=11.3.0",
]

[project.optional-dependencies]
dev = [
    "nuitka>=2.7.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "nuitka>=2.7.16",
]
