[project]
name = "pdf-viewer"
version = "0.1.3"
description = "Professional cross-platform PDF viewer with dual-page mode and animations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.26.4",
    "pillow>=11.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "nuitka>=2.7.16",
    "ordered-set>=4.1.0", 
    "zstandard>=0.22.0",
]

[tool.nuitka]
# Nuitka configuration for consistent builds
mode = "onefile"
assume-yes-for-downloads = true
enable-plugin = ["tk-inter"]
company-name = "PDF Viewer"
product-name = "PDF Viewer"
file-version = "0.1.3"
product-version = "0.1.3"
lto = "no"
low-memory = true
